--- a/src/app/v2/modules/evaluaciones-madurez/evaluaciones-madurez.component.html
+++ b/src/app/v2/modules/evaluaciones-madurez/evaluaciones-madurez.component.html
@@ -6,10 +6,21 @@
   UserType.COMPANY) {
   <section class="max-w-7xl mx-auto px-4 py-8">
     <!-- Company Header -->
-    <h1 class="text-4xl font-bold text-gray-700 mb-8">
-      <strong>Empresa:</strong>
-      {{ currentUser()?.name ?? "No disponible" }}
-    </h1>
+    <!-- Company Header -->
+    <div class="flex items-center mb-8">
+      <img
+        [src]="profileImageUrl"
+        alt="Perfil"
+        class="w-14 h-10 rounded-full mr-4"
+        (error)="
+          profileImageUrl = 'http://64.176.10.243:3020/logos/default.png'
+        "
+      />
+      <h1 class="text-4xl font-bold text-gray-700">
+        <strong>Empresa:</strong>
+        {{ currentUser()?.name ?? "No disponible" }}
+      </h1>
+    </div>
 
     <div class="grid grid-cols-1 lg:grid-cols-3 gap-8">
       <div class="lg:col-span-2">
