--- a/src/app/v2/modules/evaluaciones-madurez/evaluaciones-madurez.component.html
+++ b/src/app/v2/modules/evaluaciones-madurez/evaluaciones-madurez.component.html
@@ -13,7 +13,8 @@
         alt="Perfil"
         class="w-14 h-10 rounded-full mr-4"
         (error)="
-          profileImageUrl = 'http://64.176.10.243:3020/logos/default.png'
+          profileImageUrl =
+            'https://accesos.nuevoloslagos.org/logos/default.png'
         "
       />
       <h1 class="text-4xl font-bold text-gray-700">
