--- a/src/app/v2/components/navbar/navbar.component.html
+++ b/src/app/v2/components/navbar/navbar.component.html
@@ -80,7 +80,8 @@
               alt="Perfil"
               class="w-10 h-8 rounded-full mr-1"
               (error)="
-                profileImageUrl = 'http://64.176.10.243:3020/logos/default.png'
+                profileImageUrl =
+                  'https://accesos.nuevoloslagos.org/logos/default.png'
               "
             />
             {{ menu.label }}
